--- a/lez01/sections/variabili.tex
+++ b/lez01/sections/variabili.tex
@@ -54,12 +54,12 @@
 
   Una variable:
   \begin{itemize}
-    \item Sono un ``\emph{contenitore}'' di informazioni (= un certo numero di bytes allocati nella 
+    \item è un ``\emph{contenitore}'' di informazioni (= un certo numero di bytes allocati nella
 	  memoria volatile del computer (RAM));
-    \item Contraddistinte da un identificatore, negli esempi di prima \texttt{i}, \texttt{pi}, 
+    \item è contraddistinta da un identificatore, negli esempi di prima \texttt{i}, \texttt{pi},
 	  \texttt{yoda}, $\dots$
-	  (\emph{case sensitive} \texttt{pippo} $\neq$ \texttt{Pippo} $\neq$ \texttt{PIPPO}); 
-    \item Nei linguaggi fortemente tipizzati hanno un \textbf{tipo}, negli esempi di prima 
+	  (\emph{case sensitive} \texttt{pippo} $\neq$ \texttt{Pippo} $\neq$ \texttt{PIPPO});
+    \item nei linguaggi fortemente tipizzati hanno un \textbf{tipo}, negli esempi di prima
 	  \texttt{\textbf{int}}, \texttt{\textbf{double}}, \texttt{\textbf{String}}, $\dots$;
   \end{itemize}
 
@@ -69,7 +69,7 @@
 
 \begin{frame}{Dichiarazione e assegnamento}
 
-  Le Variabilo possono essere create con la \textbf{dichiarazione}:
+  Le variabili possono essere create con la \textbf{dichiarazione}:
   \begin{itemize}
     \item \textbf{\structure{dichiarazione}}: \texttt{\textbf{int} i;} (\emph{specifica} il tipo di un identificatore);
     \item \textbf{\structure{assegnamento}}:  \texttt{i = 1;} (\emph{assegna} un valore a un identificatore);
