Clarify exercise on bisection method in lez02

--- a/lez02/sections/commenti.tex
+++ b/lez02/sections/commenti.tex
@@ -41,9 +41,9 @@
     \begin{minipage}[c]{11cm}
       {\color{green!50!black}
 	\begin{verbatim}
-	  // inizializzo min a un valore che è sicuramente 
+	  // inizializzo max a un valore che è sicuramente
 	  // più piccolo dei valori assunti dal vettore
-	  int min = -1;      
+	  int max = -1;
 	\end{verbatim} 
       }
     \end{minipage}  
@@ -56,8 +56,8 @@
   \begin{center}
     \begin{minipage}[c]{11cm}
       \begin{verbatim}
-	// inizializzo min a -1
-	int min = -1;
+	// inizializzo max a -1
+	int max = -1;
       \end{verbatim}
     \end{minipage}  
   \end{center}
