Fix error in Newton's method description

--- a/lez02/sections/esercizi.tex
+++ b/lez02/sections/esercizi.tex
@@ -80,12 +80,12 @@
     
     \begin{equation*}
       \left\{\begin{aligned}
-	  & x_0 = 0.5\\
+	  & x_0 = \dfrac{1}{\lfloor x \rfloor} \\
 	  & x_{n +1} = 0.5 \cdot {x_n} (3  - zx^2_n)
       \end{aligned}\right.
     \end{equation*}
     \begin{equation*}
-     \lim_{n \to \infty} x_{n} = \sqrt{z}
+     \lim_{n \to \infty} x_{n} = \dfrac{1}{\sqrt{z}}
     \end{equation*}
   \end{itemize}
   
