--- a/lez02/sections/while.tex
+++ b/lez02/sections/while.tex
@@ -29,12 +29,12 @@
     Si può calcolare la radice quadrata di un numero $z$ nel modo seguente:
     \begin{equation*}
       \left\{\begin{aligned}
-	  & x_0 = 0.5\\
+	  & x_0 = \dfrac{1}{\lfloor x \rfloor} \\
 	  & x_{n +1} = 0.5 \cdot {x_n} (3  - zx^2_n)
       \end{aligned}\right.
     \end{equation*}
     \begin{equation*}
-     \lim_{n \to \infty} x_{n} = \sqrt{z}
+     \lim_{n \to \infty} x_{n} = \dfrac{1}{\sqrt{z}}
     \end{equation*}
     Posso calcolare l'errore compiuto al termine $n$-esimo, $x_{n}$ come $\varepsilon_{n} = |x^{2}_{n} - z|$,
     Posso calcolare $\sqrt{z}$ a una data precisione: ``prosegui a calcolare nuovi termini della successione $x_{n}$
