--- a/lez02/sections/while.tex
+++ b/lez02/sections/while.tex
@@ -36,7 +36,8 @@
     \begin{equation*}
      \lim_{n \to \infty} x_{n} = \dfrac{1}{\sqrt{z}}
     \end{equation*}
-    Posso calcolare l'errore compiuto al termine $n$-esimo, $x_{n}$ come $\varepsilon_{n} = |x^{2}_{n} - z|$,
+    Posso calcolare l'errore compiuto al termine $n$-esimo, $x_{n}$ come 
+    $\varepsilon_{n} = \left|\dfrac{1}{x^{2}_{n}} - z\right|$.
     Posso calcolare $\sqrt{z}$ a una data precisione: ``prosegui a calcolare nuovi termini della successione $x_{n}$
     \textbf{finché l'errore non è più piccolo di $10^{-3}$}''.
 
