--- a/lez02/sections/esercizi.tex
+++ b/lez02/sections/esercizi.tex
@@ -95,7 +95,7 @@
 
   \begin{scriptsize}
     \textbf{Nota di implementazione:} quando scegliete il valore iniziale calcolate (a mente) l'intero più grande $x$
-    tale per cui $x^2 < z$ e inizializate la successione, ovvero usate come valore di $x_0$ il reciproco di quel numero.
+    tale per cui $x^2 < z$ e inizializzate la successione, ovvero usate come valore di $x_0$ il reciproco di quel numero.
     (${\lfloor x \rfloor}$ indica il \texttt{floor} di $x$ ovvero il valore di $x$ arrotondato all'intero più piccolo).  
   \end{scriptsize}
 
