Minor fixes in lez03

--- a/lez03/sections/array.tex
+++ b/lez03/sections/array.tex
@@ -11,7 +11,7 @@
 %   
 % \end{frame}
 
-\begin{frame}{Array (I)}
+  \begin{frame}{Array (I)}
   \begin{table}[]
   \centering
     \begin{tabular}{cccccccccc}
@@ -19,7 +19,7 @@
       \rowcolor[HTML]{EFEFEF} 
       {\color[HTML]{FE0000} \textbf{0}}               & \textbf{1}                                     & \textbf{2}                                     & \textbf{3}                                     & \textbf{4}                                     & \textbf{5}                                     & \textbf{6}                                     & \textbf{7}                                     & \textbf{8}                                     & \textbf{9}                                     \\ \hline
       \rowcolor[HTML]{9AFF99} 
-      \multicolumn{1}{|c|}{\cellcolor[HTML]{9AFF99}\String{a"}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9AFF99}\String{"b"}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9AFF99}\String{"c"}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9AFF99}\String{"d"}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9AFF99}\String{"e"}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9AFF99}\String{"f"}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9AFF99}\String{"g"}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9AFF99}\String{"h"}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9AFF99}\String{"i"}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9AFF99}\String{"j"}} \\ \hline
+      \multicolumn{1}{|c|}{\cellcolor[HTML]{9AFF99}\String{"a"}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9AFF99}\String{"b"}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9AFF99}\String{"c"}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9AFF99}\String{"d"}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9AFF99}\String{"e"}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9AFF99}\String{"f"}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9AFF99}\String{"g"}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9AFF99}\String{"h"}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9AFF99}\String{"i"}} & \multicolumn{1}{c|}{\cellcolor[HTML]{9AFF99}\String{"j"}} \\ \hline
       \multicolumn{10}{c}{}                                                                                                                                                                                                                                                                                                                                                                                                                                                      
     \end{tabular}
   \end{table}  
