Fix typos (ht to Cent)

--- a/lez03/sections/funzioni.tex
+++ b/lez03/sections/funzioni.tex
@@ -92,7 +92,7 @@
   \end{JavaCodePlain}
 
   Le funzioni sono caratterizzate dalle parentesi tonde \texttt{f()} che servono
-  per potere \emph{chiamare} una funzioone.
+  per potere \emph{chiamare} una funzione.
 
 \end{frame}
 
@@ -106,7 +106,7 @@
   \Grey!}|
   \end{JavaCodePlain}
 
-  All'interno delle parentesi tonde si indicano gli argometi della
+  All'interno delle parentesi tonde si indicano gli argomenti della
   funzione detti \textbf{parametri formali}.
 
 \end{frame}
@@ -300,9 +300,9 @@
   
   Le chiamate:
   \begin{JavaCodePlain}[commandchars=\\!|]
-  risultato = somma(x, y);
+  risultato = somma(a, b);
   \dots
-  stampaSomma(x, y);
+  stampaSomma(a, b);
   \end{JavaCodePlain}
   hanno come \textbf{parametri attuali} le variabli \texttt{a} e \texttt{b}.
 
